[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprites/ghost2.png" type="Texture" id=1]
[ext_resource path="res://side2sideghost2.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 11 )

[node name="side2sideghost2" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 2 )

[node name="Ghost2" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.5, -3 )
shape = SubResource( 1 )
disabled = true

[node name="leftrighttimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="bobbingtimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0.5, -3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[connection signal="timeout" from="leftrighttimer" to="." method="_on_leftrighttimer_timeout"]
[connection signal="timeout" from="bobbingtimer" to="." method="_on_bobbingtimer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
